# orchestrator

./: .dockerignore  .env.example  .gitignore  AGENTS.md  API_DOCS.md  GEMINI.md  README.md  RUNBOOK.md  alembic.ini  demo.py  docker-compose.override.yml  docker-compose.yaml  dockerfile  main.py  pyproject.toml  rotator.py
alembic/: env.py
alembic/versions/: 001_initial.py
app/: config.py  main.py
app/api/: admin.py  proxy.py
app/core/: logging.py  middleware.py  state.py
app/db/: __init__.py  engine.py  models.py
app/security/: audit.py  auth.py  encryption.py
app/services/: rate_limiter.py  statistics.py
app/services/rotators/: gemini.py  vertex.py
old_tests/: providers.yaml  test_save_images.py
scripts/: demo.py  encrypt_keys.py  load_test.py  test_key.py
tests/: conftest.py  imagen-3.0-capability-001.docx  my_test.py  test_all_models.py  test_capability.py  test_config.py  test_encryption.py  test_main.py  test_save_images.py  test_statistics.py  test_video.py  variation_test.py
tests/custom/: check_keys_admin.py  check_working_models.py  models.json
tests/integration/: test_real_models.py
